--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                 <div class="dropdown">
                     <button onclick="myFunction()" class="dropbtn"><img id="dropimg" src="Images/drop2.png"></button>
                         <div id="myDropdown" class="dropdown-content">
+                            <!-- Dark/Light Toggle Button -->
+                            <a id="dltoggle" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode"><img name="sun" src="Images/sun2.png" width="45" height="45"></a>
                             <a href=#home class="dropbtn">HOME</a>
                             <a href=#about class="dropbtn">ABOUT</a>
                             <a href=#projects class="dropbtn">CURRENT PROJECTS</a>
@@ -55,9 +57,6 @@
                             <a href=#contact class="dropbtn">CONTACT</a>           
                         </div>
                 </div>
-
-                <!-- Dark/Light Toggle Button -->
-                <a id="dltoggle" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode"><img name="sun" src="Images/sun2.png" width="45" height="45" style="margin-top: 10;"></a>
             </div>
 
             <!-- Scroll to top button -->
@@ -103,9 +102,8 @@
 
                     <!-- My projects -->
                     <center>
-                        <div class="container">
                             <!-- Box 1 -->
-                            <div id="leftbox"> 
+                            <div class="box"> 
                                 <img src="Images/memofood.png" class="boximg">
                                     <p class="boxtitle">MEMOFOOD</p>
                                     <p class="boxpar"> 
@@ -113,11 +111,11 @@
                                     </p>
                                     <p class="boxpar"> 
                                         If you'd like to learn more about what we're about, you can visit our website at <a href="https://www.memofood.ca/" style="color: #4d4d4d; font-weight: 600; text-decoration: none;">memofood.ca</a> for more info.
-                                    </p>
+                                    </p><br>
                             </div>
 
                             <!-- Box 2 -->
-                            <div id="centerbox">
+                            <div class="box">
                                 <img src="Images/countmein.png" class="boximg">
                                     <p class="boxtitle">COUNTMEIN</p>
                                     <p class="boxpar"> 
@@ -125,11 +123,11 @@
                                     </p>
                                     <p class="boxpar"> 
                                         If you'd to chat more with me about CountMeIn, send me an email at <span style="font-weight: 600;">odosaobasuyi@gmail.com</span>.
-                                    </p> 
+                                    </p><br> 
                             </div>
 
                             <!-- Box 3 -->
-                            <div id="rightbox">
+                            <div class="box">
                                 <img src="Images/learning.png" class="boximg">
                                     <p class="boxtitle">CONTINUING TO LEARN</p>
                                     <p class="boxpar"> 
@@ -137,9 +135,9 @@
                                     </p>
                                     <p class="boxpar"> 
                                         In general, I love to learn about how stuff works and get fascinated by almost anything. Right now, I'm learning about VR/AR, but I'm working on expanding my scope to other incredible areas of technology.  
-                                    </p>
+                                    </p><br>
                             </div> 
-                        </div><br><br><br><br>
+                        <br><br><br><br>
                     </center>
 
                 </div>
@@ -188,7 +186,7 @@
                             <img src="Images/fds.jpg" class="image">
                             <div class="overlay">
                                 <div class="text2">FDS</div>
-                                <div class="text3">Future Design School (FDS) empowers students with the skills they need to be ready for the future, while helping hundreds of students in dozens of cities to realize their own innovation potential and learn skills in app design.</div>
+                                <div class="text3">Future Design School (FDS) empowers students with the skills they need to be ready for the future, while helping hundreds of students in dozens of cities to learn skills in app design.</div>
                                 <a class="text4" href="https://futuredesignschool.com/" target="_blank">fds.com</a>
                             </div>
                         </div><br>
@@ -228,64 +226,60 @@
 
                     <center>
                     <!-- Container 1 -->
-                    <div class="container3">
                         <!-- Box 1 -->
-                        <div id="leftbox2"> 
+                        <div class="box"> 
                             <img src="Images/lightbulb.png" class="boximg">
                             <p class="boxtitle">ENTREPRENEURSHIP</p>
                             <p class="boxpar"> 
                                 I have been part of a number of entrepreneurship programs including Future Design School (FDS), The Knowledge Society (TKS), and SHAD and am the Co-Founder of Memofood.
-                            </p> 
+                            </p><br> 
                         </div>
 
                         <!-- Box 2 -->
-                        <div id="centerbox2">
+                        <div class="box">
                             <img src="Images/vr.png" class="boximg">
                             <p class="boxtitle">VR/AR</p>
                             <p class="boxpar"> 
                                 Virtual and Augmented Reality is a revolutionary technology that excites me, and I have written a few articles on Linkedin on it, as well as talking about it on my YouTube channel. 
-                            </p> 
+                            </p><br> 
                         </div>
 
                         <!-- Box 3 -->
-                        <div id="rightbox2">
+                        <div class="box">
                             <img src="Images/hardware.png" class="boximg">
                             <p class="boxtitle">ROBOTICS & HARDWARE</p>
                             <p class="boxpar"> 
                                 I have developed a number of robotics and hardware projects in hackathons and as general side projects.  
-                            </p> 
+                            </p><br> 
                         </div> 
-                    </div>
 
                     <!-- Container 2 -->
-                    <div class="container3">
                         <!-- Box 4 -->
-                        <div id="leftbox2">
+                        <div class="box">
                             <img src="Images/software.png" class="boximg">
                             <p class="boxtitle">SOFTWARE</p>
                             <p class="boxpar"> 
                                 I have also developed numerous software projects, mostly in the form of websites and games. I always love creating something and getting it to do something cool! 
-                            </p> 
+                            </p><br> 
                         </div> 
 
                         <!-- Box 5 -->
-                        <div id="centerbox2"> 
+                        <div class="box"> 
                             <img src="Images/learning2.png" class="boximg">
                             <p class="boxtitle">LEARNING</p>
                             <p class="boxpar"> 
                                 Learning has been a passion of mine from an extremely young age. I love to learn more about how things work, read books and attend conferences regularly.
-                            </p> 
+                            </p><br> 
                         </div>
 
                         <!-- Box 6 -->
-                        <div id="rightbox2">
+                        <div class="box">
                             <img src="Images/other.png" class="boximg">
                             <p class="boxtitle">OTHER INTERESTS</p>
                             <p class="boxpar"> 
                                 Some of my other interests include soccer, taekwondo, playing the alto saxophone, drawing, reading, debating, coding, and just chilling with friends. 
-                            </p> 
+                            </p><br> 
                         </div> 
-                    </div>
                     </center><br><br><br><br>
 
                 </div>
@@ -348,7 +342,10 @@
                 <a class="tooltip"><img src="Images/phone.png" class="copybtn" hspace="5;"><span class="tooltiptext">Available upon request</span></a>
 
                 <!-- Copyright Statement -->
-                <br><p class="copytext">&copy; 2019 <span style="font-weight: 700; font-family: IBM Plex Sans;">ODOSA OBASUYI</span>. All Rights Reserved. &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Made by Odosa Obasuyi on <i class="fa fa-github"></i> using &nbsp;<img src="Images/brackets.png" width="22;"></p>
+                <center>
+                <br><p class="copytext">&copy; 2019 <span style="font-weight: 700; font-family: IBM Plex Sans;">ODOSA OBASUYI</span>. All Rights Reserved. </p> <p>Made by Odosa Obasuyi on <i class="fa fa-github"></i> using &nbsp;<img src="Images/brackets.png" width="22;"></p><br>
+                    
+                </center>
 
             </div>
             
