--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
                         <form action="mailto:odosaobasuyi@gmail.com" method="post" enctype="text/plain">
                             <input type="text" id="name" name="name" placeholder="Your name...">
                             <input type="text" id="email" name="email" placeholder="Your email...">
-                            <input type="text" id="email" name="email" placeholder="Your subject...">
-                            <textarea id="message" name="mesage" placeholder="Your Message..." style="height:200px;"></textarea>
+                            <input type="text" id="subject" name="email" placeholder="Your subject...">
+                            <textarea id="message" name="message" placeholder="Your Message..." style="height:200px;"></textarea>
                             <center><input type="submit" value="Send Message"></center>
                         </form>
                     </div>
