--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         <form action="mailto:odosaobasuyi@gmail.com" method="post" enctype="text/plain">
                             <input type="text" id="name" name="name" placeholder="Your name...">
                             <input type="text" id="email" name="email" placeholder="Your email...">
-                            <input type="text" id="subject" name="email" placeholder="Your subject...">
+                            <input type="text" id="subject" name="subject" placeholder="Your subject...">
                             <textarea id="message" name="message" placeholder="Your Message..." style="height:200px;"></textarea>
                             <center><input type="submit" value="Send Message"></center>
                         </form>
