--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                         I am currently the co-founder of a company started in <span style="font-weight: 600;">SHAD</span> called Memofood. We are working on what we believe is a solution to food waste in Canada.
                                     </p>
                                     <p class="boxpar"> 
-                                        If you'd like to learn more about what we're about, you can visit our website at <a href="https://www.memofood.ca/" style="color: #4d4d4d; font-weight: 600; text-decoration: none;">memofood.ca</a> for more info.
+                                        If you'd like to learn more about what we're about, you can visit our website at <a href="http://www.memofood.ca/" style="color: #4d4d4d; font-weight: 600; text-decoration: underline;">www.memofood.ca</a> for more info.
                                     </p><br>
                             </div>
 
@@ -157,7 +157,7 @@
                             <div class="overlay">
                                 <div class="text2">MEMOFOOD</div>
                                 <div class="text3">Memofood is a company whose goal is to reduce food waste by reminding users of their food's expiry dates, decreasing one of the leading causes of food waste in North America.</div>
-                                <a class="text4" href="https://www.memofood.ca/" target="_blank">memofood.ca</a>
+                                <a class="text4" href="http://www.memofood.ca/" target="_blank">www.memofood.ca</a>
                             </div>
                         </div><br>
 
@@ -167,7 +167,7 @@
                             <div class="overlay">
                                 <div class="text2">SHAD</div>
                                 <div class="text3">SHAD is a STEAM program for students in Grade 10 and 11. It is a month-long program that prepares students to take on social and economic challenges.</div>
-                                <a class="text4" href="https://www.shad.ca/" target="_blank">shad.ca</a>
+                                <a class="text4" href="https://www.shad.ca/" target="_blank">www.shad.ca</a>
                             </div>
                         </div><br>
 
@@ -177,7 +177,7 @@
                             <div class="overlay">
                                 <div class="text2">TKS</div>
                                 <div class="text3">The Knowledge Society (TKS) is Canada's leading innovation incubator for young leaders age 13-17. TKS develops ambitious young people to impact billions using emerging technologies.</div>
-                                <a class="text4" href="https://theksociety.com/" target="_blank">tks.com</a>
+                                <a class="text4" href="https://theksociety.com/" target="_blank">www.tks.com</a>
                             </div>
                         </div><br>
                         
@@ -187,7 +187,7 @@
                             <div class="overlay">
                                 <div class="text2">FDS</div>
                                 <div class="text3">Future Design School (FDS) empowers students with the skills they need to be ready for the future, while helping hundreds of students in dozens of cities to learn skills in app design.</div>
-                                <a class="text4" href="https://futuredesignschool.com/" target="_blank">fds.com</a>
+                                <a class="text4" href="https://futuredesignschool.com/" target="_blank">www.fds.com</a>
                             </div>
                         </div><br>
 
@@ -197,7 +197,7 @@
                             <div class="overlay">
                                 <div class="text2">UCC</div>
                                 <div class="text3">Upper Canada College (UCC) is an IB World School that enrolls 1,160 boys in Senior Kindergarten through Year 12, and has 10,000 alumni in more than 75 countries.</div>
-                                <a class="text4" href="http://ucc.on.ca/" target="_blank">ucc.on.ca</a>
+                                <a class="text4" href="http://ucc.on.ca/" target="_blank">www.ucc.on.ca</a>
                             </div>
                         </div><br>
                     </center><br><br><br><br><br>
@@ -324,7 +324,7 @@
                         <form action="mailto:odosaobasuyi@gmail.com" method="post" enctype="text/plain">
                             <input type="text" id="name" name="name" placeholder="Your name...">
                             <input type="text" id="email" name="email" placeholder="Your email...">
-                            <input type="text" id="subject" name="subject" placeholder="Your subject...">
+                            <input type="text" id="subject" name="email" placeholder="Your subject...">
                             <textarea id="message" name="message" placeholder="Your Message..." style="height:200px;"></textarea>
                             <center><input type="submit" value="Send Message"></center>
                         </form>
