--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <section id="home">
                 <div class="graydiv" style="background-image: url(Images/home.png);"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                     <!-- Title -->
-                    <p class="hometitle">HI! I'M ODOSA.</p>
+                    <p class="hometitle">ODOSA OBASUYI</p>
 
                     <!-- Typewriter (Also 696969 :) -->
                     <p id="text"></p> 
