--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                         I personally believe that in a world that is changing so fast with the exponential rise of technology, education is the one thing that hasn't changed. That's why I started <span style="font-weight: 600;">CountMeIn</span>, a passion project of mine that I started to help kids learn math in a more fun, effective way. 
                                     </p>
                                     <p class="boxpar"> 
-                                        If you'd to chat more with me about CountMeIn, send me an email at <span style="font-weight: 600;">odosaobasuyi@gmail.com</span>.
+                                        If you'd like to chat more with me about CountMeIn, send me an email at <span style="font-weight: 600;">odosaobasuyi@gmail.com</span>.
                                     </p><br> 
                             </div>
 
@@ -230,7 +230,7 @@
                             <img src="Images/lightbulb.png" class="boximg">
                             <p class="boxtitle">ENTREPRENEURSHIP</p>
                             <p class="boxpar"> 
-                                I have been part of a number of entrepreneurship programs including Future Design School (FDS), The Knowledge Society (TKS), and SHAD and am the Co-Founder of Memofood.
+                                I have been part of a number of entrepreneurship programs including Future Design School (FDS), The Knowledge Society (TKS), and SHAD and I am the Co-Founder of Memofood.
                             </p><br> 
                         </div>
 
