--- a/blogs.html
+++ b/blogs.html
@@ -68,6 +68,16 @@
                     <div class="blogcontainer">
                         
                         <div class="blogbox">
+                            <img src="Images/mars.jpg" style="width: 400px; margin-bottom: 15;">
+                            <p class="blogtitle">MaRS Startup Open House</p>
+                            <p class="boxpar"> 
+                                MaRS Discovery District's Startup Open House was an amazing experience where I got to see some really cool startups...
+                            </p><br>
+                            <button onclick=" window.open('https://www.linkedin.com/embed/feed/update/urn:li:share:6584158271823839232','_blank')" class="blogbtn2" ><i class="fa fa-book"></i> &nbsp READ MORE</button><br>
+                            <p style="float: right; margin-right: 20; font-size: 15; color: gray;">29/9/2019</p>
+                        </div>
+                        
+                        <div class="blogbox">
                             <img src="Images/fitc.JPG" style="width: 400px; margin-bottom: 15;">
                             <p class="blogtitle">FITC 2019</p>
                             <p class="boxpar"> 
