--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <h1>ABOUT ME</h1>
 
                     <!-- Me :) -->
-                    <img src="Images/odosa.jpg" class="aboutimg">
+                    <img src="Images/me.jfif" class="aboutimg">
 
                     <!-- Stuff about me -->
                     <p class="aboutpar">Hi! <span style="font-weight: 300;"> I'm <span style="font-weight: 700;">Odosa Obasuyi</span>, a freshman at the University of Toronto, St. George, studying Computer Science. I have a passion for computer science and am interested in exponential technology (specifically virtual and augmented reality &amp; IoT (Internet of things)), entrepreneurship, and programming. I've created and been part of many projects focused on solving real-world problems at hackathons, tech and innovation-focused programs, and as personal side projects.</span></p>
