--- a/backup.html
+++ b/backup.html
@@ -327,7 +327,7 @@
                     <h1 class="light-mode">Here's my portfolio.</h1>
 
                     <!-- Resume Button -->        
-                    <button onclick=" window.open('Images/resume.jpg','_blank')" class="downloadbtn"><i class="fa fa-download"></i> &nbsp Download my resume</button><br><br><br><br><br>
+                    <button onclick=" window.open('resume.jpg','_blank')" class="downloadbtn"><i class="fa fa-download"></i> &nbsp Download my resume</button><br><br><br><br><br>
                 </div>
             </section>
         
