--- a/backup.html
+++ b/backup.html
@@ -94,7 +94,7 @@
                     <img src="Images/me.jfif" class="aboutimg">
 
                     <!-- Stuff about me -->
-                    <p class="aboutpar"><span style="font-weight: 300;"> I'm <span style="font-weight: 700;">Odosa Obasuyi</span>, a freshman at the University of Toronto, St. George, studying Computer Science. I have a passion for computer science and am interested in exponential technology (specifically virtual and augmented reality &amp; IoT (Internet of things)), entrepreneurship, and programming. I've created and been part of many projects focused on solving real-world problems at hackathons, tech and innovation-focused programs, and as personal side projects.</span></p>
+                    <p class="aboutpar"><span style="font-weight: 300;"> I'm <span style="font-weight: 700;">Odosa Obasuyi</span>, a freshman at the University of Toronto, St. George, currently studying Computer Science, Computational Cognitive Science, and Math. I have a passion for software development and am interested in exponential technology (specifically virtual and augmented reality &amp; IoT (Internet of things)), entrepreneurship, and programming. I've created and been part of many projects focused on solving real-world problems at hackathons, tech and innovation-focused programs, and as personal side projects.</span></p>
 
                     <p class="aboutpar2">My goal is to create a company that impacts billions of lives around the world for the better, and to make a permanent impact on our future.</p><br><br><br><br><br><br>
                 </div>
