Vector AI Update

--- a/backup.html
+++ b/backup.html
@@ -235,13 +235,23 @@
                             </div>
                         </div><br>
 
-                        <!-- UofT -->
+                        <!-- WooYourBoo -->
                         <div class="expcontainer">
                             <img src="Images/wooyourboo.png" class="image">
                             <div class="overlay">
                                 <div class="text2">WooYourBoo (Intern)</div>
                                 <div class="text3">WooYourBoo is a Toronto-based startup focused on building strong, fun relationships. The app lets you & your boo swipe and match on date ideas in your area.</div>
                                 <button onclick=" window.open('https://www.wooyourboo.com/','_blank')" class="expbtn"><i class="fa fa-external-link"></i> &nbsp Check them out!</button>
+                            </div>
+                        </div><br>
+
+                        <!-- Vector Institute -->
+                        <div class="expcontainer">
+                            <img src="Images/vector.jpg" class="image">
+                            <div class="overlay">
+                                <div class="text2" style="font-size: 2.0vw;">Vector AI Institute - Intro to ML Program (Student)</div>
+                                <div class="text3">The Vector Institute is an independent, not-for-profit corporation dedicated to research in the field of artificial intelligence (AI), excelling in machine and deep learning.</div>
+                                <button onclick=" window.open('https://vectorinstitute.ai/','_blank')" class="expbtn"><i class="fa fa-external-link"></i> &nbsp Check them out!</button>
                             </div>
                         </div><br>
                         
@@ -415,7 +425,7 @@
                     <h1 class="light-mode">Here's my portfolio.</h1>
 
                     <!-- Resume Button -->        
-                    <button onclick=" window.open('Images/resume.pdf','_blank')" class="downloadbtn"><i class="fa fa-download"></i> &nbsp Download my resume</button><br><br><br><br><br>
+                    <button onclick=" window.open('resume.pdf','_blank')" class="downloadbtn"><i class="fa fa-download"></i> &nbsp Download my resume</button><br><br><br><br><br>
                 </div>
             </section>
         
