Landing Image + Modal Text Fixes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
             <!-- Home section -->
             <section id="home">
-                <div style="background-image: url(Images/Me\ Speaking\ Dark.jpg); position:sticky; background-size: 100%;"><br><br><br><br><br><br><br><br><br><br><br>
+                <div style="background-image: url(Images/Me\ Speaking\ Dark.jpg); background-repeat: no-repeat; background-attachment: fixed;
+                background-position: center; background-size: cover;"><br><br><br><br><br><br><br><br><br><br><br>
                     <!-- Intro + Title -->
                     <p class="homeintro">I'm</p>
                     <p class="hometitle">ODOSA OBASUYI</p>
@@ -525,12 +526,8 @@
                     <div class="modal-body"><br>
                         <p class="boxpar"> 
                             Autinerary is a non-profit organization aiming to provide a central, positivity-focused, exponential-tech 
-                            centered platform to connect everything and everything autism in one place.
+                            solution backed platform for evrything autism.
                         </p>
-                        <p class="boxpar"> 
-                            I've shared everything about its story and how Autinerary came to be on the website, along with a lot more
-                            cool stuff, so check it out! (And recommend it to any autism families too!)
-                        </p><br>
                     </div><br>
                     <button onclick=" window.open('https://autinerary.ca','_blank')" class="modalbtn" style="float: none; background-color: #ff4bfd;">Check it out!</button>
                     <br>
@@ -552,11 +549,9 @@
                            As part of my Vector AI Intro to ML Course, I compared multiple machine learning models in their ability to 
                            whether an adult was on the autism spectrum.
                         </p>
-                        <p class="boxpar"> 
-                            The project was rewarding, and by the end of it, I could see how my knowledge of the KNN, Decision Tree, Random Forest, and
-                            Neural Network algorithms, as well as Python's Scikit-learn library, had developed. Check out my project below!
-                        </p><br>
-                        <button onclick=" window.open('https://colab.research.google.com/drive/1MiL-cgeo5SanHWQCLtwOx4ImaZqGFsIL?usp=sharing','_blank')" class="modalbtn" style="float: none; background-color: #000000;">Check it out!</button>
+                        <button onclick=" 
+                        window.open('https://colab.research.google.com/drive/1MiL-cgeo5SanHWQCLtwOx4ImaZqGFsIL?usp=sharing','_blank')" 
+                        class="modalbtn" style="float: none; background-color: #000000;">Check it out!</button>
                     </div><br>
                 </div>
 
@@ -576,12 +571,8 @@
                            As part of my IBM Data Science Professional Certificate, I created a machine learning pipeline to predict the
                            outcome of one of SpaceX's rocket launches.
                         </p>
-                        <p class="boxpar"> 
-                            It was a great challenge, requiring everything I had learned so far and more. But after completion, I was able to 
-                            truly build on my Machine Learning (using Scikit Learn), Python, SQL, R, IBM Cloud, Git, Jupyter Notebook, Web Scraping, 
-                            Data Analysis, and Data Visualization skills, among others. You can see what I built below!
-                        </p><br>
-                        <button onclick=" window.open('https://github.com/od-obas1187/IBMFinalProject','_blank')" class="modalbtn" style="float: none; background-color: #2600ff;">Check it out!</button>
+                        <button onclick=" window.open('https://github.com/od-obas1187/IBMFinalProject','_blank')" class="modalbtn" 
+                        style="float: none; background-color: #2600ff;">Check it out!</button>
                     </div><br>
                 </div>
 
@@ -600,8 +591,7 @@
                         <p class="boxpar"> 
                             With some friends, we created a desktop application that allows users to keep track of tasks, when they 
                             committed to working on them, and keep track of multiple task groups - called "curriculums" - at the same 
-                            time. We did this using Java, and following Clean Architecture Software Engineering principles.
-                            You can check out the code for it below!
+                            time.
                         </p>
                         <button onclick=" window.open('https://github.com/CSC207-2022F-UofT/course-project-schedulize/','_blank')" 
                         class="modalbtn" style="float: none; background-color: #f7bd51;">View the code</button>
@@ -626,14 +616,10 @@
                             a passion project I worked on for a few months - both to put my coding and Photoshop skills to the test 
                             and as a modernized tribute to my favorite retro games of the past.
                         </p>
-                        <p class="boxpar"> 
-                            The demo of the first level is available upon request, so email 
-                            <span style="font-weight: 600;">dbdemoofficial@gmail.com</span> to try it!
-                        </p><br>
                         <button onclick=" window.open('Images/DB - One Pager.gif','_blank')" class="modalbtn"
                         style="float: none; background-color: #d78b49;">Game Breakdown</button>
                         <button onclick=" window.open('mailto:officialdbdemo@gmail.com','_blank')" class="modalbtn" 
-                        style="float: none; background-color: #d78b49;">Try the demo!</button>
+                        style="float: none; background-color: #d78b49;">Get the demo!</button>
                     </div><br>
                 </div>
 
@@ -651,11 +637,8 @@
                     <div class="modal-body"><br>
                         <p class="boxpar"> 
                             I was the co-founder of a company started in <span style="font-weight: 600;">BETA Camp</span> called Local 
-                            Bundles, where we attempted to aid local restaurants affected by the pandemic.
-                        </p>
-                        <p class="boxpar"> 
-                            Our solution was creating online gift card bundles for these local restaurants, and we were actually able to 
-                            get three restaurants in Oakville on board!
+                            Bundles, where we attempted to aid local restaurants affected by the pandemic by creating online gift card 
+                            bundles for these local restaurants, and we were actually able to get three restaurants in Oakville on board!
                         </p><br>
                         <button onclick=" window.open('https://localbundles.square.site/','_blank')" class="modalbtn" style="float: none; background-color: #830c0c;">Check us out!</button>
                     </div><br>
@@ -674,7 +657,7 @@
                     </div>
                     <div class="modal-body"><br>
                         <p class="boxpar"> 
-                            I am the co-founder of a company started in <span style="font-weight: 600;">SHAD</span> called Memofood, working on
+                            I was the co-founder of a company started in <span style="font-weight: 600;">SHAD</span> called Memofood, working on
                             what I believe is a solution to food waste in Canada.
                         </p>
                         <p class="boxpar"> 
