--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 
                 <!-- Copyright Statement -->
                 <center>
-                <br><p class="copytext">&copy; 2023 <span style="font-weight: 700; font-family: 'Rubik', sans-serif;">ODOSA OBASUYI</span>. All Rights Reserved. </p> <p>Made from scratch by Odosa Obasuyi</p><br>
+                <br><p class="copytext">&copy; 2023 <span style="font-weight: 700; font-family: 'Rubik', sans-serif;">ODOSA OBASUYI</span>. All Rights Reserved. </p> <p><br>
                     
                 </center>
 
