--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 <div class="wgh-slider-item" id="modalbtncibc">
                                     <div class="wgh-slider-item__inner">
                                       <figure class="wgh-slider-item-figure"><img class="wgh-slider-item-figure__image" src="Images/cibcslide.jpg" alt="Gears"/>
-                                        <figcaption class="wgh-slider-item-figure__caption"><a href="https://picsum.photos/id/237/480/480">CIBC</a><span>Automation using REST APIs</span></figcaption>
+                                        <figcaption class="wgh-slider-item-figure__caption"><a href="https://picsum.photos/id/237/480/480">Automation using REST APIs</a><span>My CIBC Internship Project</span></figcaption>
                                       </figure>
                                       <label class="wgh-slider-item__trigger" for="slide-cibc" title="Show product"></label>
                                     </div>
@@ -177,7 +177,7 @@
                                 <div class="wgh-slider-item" id="modalbtnwyb">
                                     <div class="wgh-slider-item__inner">
                                       <figure class="wgh-slider-item-figure"><img class="wgh-slider-item-figure__image" src="Images/wybslide.png" alt="Email"/>
-                                        <figcaption class="wgh-slider-item-figure__caption"><a href="https://picsum.photos/id/237/480/480">Autinerary</a><span>A Backend Email System</span></figcaption>
+                                        <figcaption class="wgh-slider-item-figure__caption"><a href="https://picsum.photos/id/237/480/480">A Backend Email System</a><span>My WooYourBoo Internship Project</span></figcaption>
                                       </figure>
                                       <label class="wgh-slider-item__trigger" for="slide-wyb" title="Show product"></label>
                                     </div>
